# neo4j-voting-service

./: .gitignore  Pipfile  README.md  README.rst  pyproject.toml
neo4j_voting_service/: app.py  neo4j_repo.py  neo4j_utils.py
tests/: test_app.py  test_neo4j_voting_service.py
