[tool.poetry]
name = "neo4j_voting_service"
version = "0.1.0"
description = ""
authors = ["Jason Koo <jalakoo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.9.2"
neo4j = "^4.4.3"
pytest = "^7.1.2"
stvis = "^0.0.2"
pyvis = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
